<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.yasin.softdoc.Fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_shape_button"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="Phone Number"
                android:paddingLeft="15dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_shape_button"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/passET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="15dp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginBTN"
        android:text="Login"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createIDTV"
        android:hint="Register now"
        android:padding="15dp"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />


</LinearLayout>
</ScrollView>